Poniendo imágenes y logo. Header y Fondo de pantalla

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -6,4 +6,6 @@
       <li><a routerLink="/jugadores">Jugadores</a></li>
     </ul>
   </nav>
+  <img src="logo1.png" alt="Logo" class="header-logo">
+
 </header>
