--- a/src/app/app.css
+++ b/src/app/app.css
@@ -7,6 +7,17 @@
   margin: 0;
   font-family: Arial, sans-serif;
 }
+  :host::before {
+    content: "";
+    position: fixed;
+    top: 150px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('/logo1.png') center center / contain no-repeat; 
+    opacity: 0.15; 
+    z-index: 0;
+  }
 
 * {
   color: darkred;
