--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,10 +1,17 @@
 <header class="main-header">
-  <nav>
-    <span class="logo">EQUIPO BASKET by FrontCat</span>
+  <nav class="container-fluid ">
+    <span class="logo ">EQUIPO BASKET by FrontCat</span>
+    <div class="container text-center">
+      <h1 class="teamName">NBA (provisional name)</h1>
+    </div>
+    
+    <div>
     <ul>
       <li><a routerLink="/home">Inicio</a></li>
       <li><a routerLink="/jugadores">Jugadores</a></li>
     </ul>
+    </div>
+    
   </nav>
   <img src="logo1.png" alt="Logo" class="header-logo">
 
