Añadidas las imágenes de los jugadores

--- a/src/app/players-component/players-component.html
+++ b/src/app/players-component/players-component.html
@@ -12,6 +12,8 @@
     <tbody>
   @for (Player of teams; track Player) {
     <tr>
+      <!--TEST de imagenes
+      <td><img [src]="Player.headshot" width="150"></td>-->
       <td>{{ Player.alias }}</td>
       <td>{{ Player.name }}</td>
       <td>{{ Player.lastName }}</td>
