--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -9,29 +9,29 @@
         </div>
         
       }@else {
-        <h1 class="teamName">NBA</h1>
+        <h1 class="teamName">N B A </h1>
       }
       
     </div>
     
-    <!--<div>
+    <div>
     <ul>
-      <li><a routerLink="/home">Inicio</a></li>
-      <li><a routerLink="/jugadores">Jugadores</a></li>
+      <li><a routerLink="/home">INICIO</a></li>
+      <li><a routerLink="/players">JUGADORES</a></li>
       
     </ul>
-    </div>-->
+    </div>
 
     <div class="teamsLogos content-flex md-2 container-fluid">
        
           <a routerLink="/home">
-            <img src="teamBadges/nbaHome.svg" alt="Logo" class="teamLogoInit mt-3 "></a>
+            <img src="teamBadges/nbaHome.svg" alt="Logo" class="teamLogoLeague3 mt-3 "></a>
             <img src="teamBadges/ATL.svg" alt="Logo" class="teamLogoLeague mt-4">
             <img src="teamBadges/BKN.svg" alt="Logo" class="teamLogoLeague mt-4">
             <img src="teamBadges/BOS.svg" alt="Logo" class="teamLogoLeague mt-4">
             <img src="teamBadges/CHA.svg" alt="Logo" class="teamLogoLeague mt-4">
             <a routerLink="/players">
-              <img src="CHI.png" alt="Logo" class="teamLogoLeague mt-4">
+              <img src="CHI.png" alt="Logo" class="teamLogoLeague3 mt-4">
             </a>
             <img src="teamBadges/CLE.svg" alt="Logo" class="teamLogoLeague mt-4">
             <img src="teamBadges/DAL.svg" alt="Logo" class="teamLogoLeague mt-4">
