--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -4,72 +4,96 @@
   color: white;
   padding: 20px 40px;
   display: flex;
+  text-shadow: 5px 5px 4px rgba(0, 0, 0, 0.5);
   justify-content: space-between;
   align-items: flex-end;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
   overflow: hidden;
-  
+  z-index: 1;
 }
-.teamName{
-  font-size: 65px;
-  color: black;
 
+.teamName {
+  font-size: 65px;
+  color: white;
+  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
 }
+
 .logo {
   font-size: 28px;
   font-weight: bold;
+  margin-left: 40px;
   z-index: 2; 
-  
 }
 
 nav ul {
   list-style: none;
+  text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
   display: flex;
-  gap: 25px;
-  margin: 0;
+  margin-left: 45px;
+  gap: 45px;
   padding: 0;
   z-index: 0;
 }
 
-  nav ul li a {
+nav ul li a {
+    display: inline-block;
     color: white;
     text-decoration: none;
     font-weight: bold;
     font-size: 18px;
-    transition: color 0.3s, transform 0.3s;
-  }
+    transition: transform 0.3s ease, color 0.3s ease, text-shadow 0.3s ease;
+}
 
-    nav ul li a:hover {
-      color: #ffd700;
-      text-shadow: 0 0 3px #ffd700, 0 0 6px #ffd700;
-      transform: translateY(-2px);
-    }
+nav ul li a:hover {
+     color: #ffd700;
+     text-decoration: underline;
+     text-shadow: 0 0 1px #ffd700, 0 0 6px #ffd700;
+     transform: scale(1.3) translateY(-2px);
+}
+
+
+
 
 .header-logo {
   position: absolute;
-  right: 40px;
-  bottom: 0;
-  max-height:99%;
+  right: 1px;
+  bottom: 20px;
+  max-height: 95%;
   height: auto;
-  opacity: 1; 
+  opacity: 1;
   object-fit: contain;
   pointer-events: none;
-  
+  z-index: -1;
 }
-.teamLogo{
+
+.teamLogo {
   height: 85px;
+  z-index: 2;
 }
-.teamLogoLeague{
-  height:45px;
+
+.teamLogoLeague {
+  height: 45px;
+  filter: drop-shadow(0 0 6px rgba(0, 0, 0, 0.6));
+  z-index: 2;
+}
+
+.teamLogoLeague3 {
+  height: 100px;
   flex-shrink: 0;
+  filter: drop-shadow(0 0 6px rgba(0, 0, 0, 0.6));
+}
 
+  .teamLogoLeague3:hover {
+    transform: scale(1.3);
+    transition: transform 0.5s;
+   }
 
-}
-.teamLogoInit{
-  height:60px;
-}
-.LogoLeague{
-  height:125px;
-}
+  .teamLogoInit {
+    height: 60px;
+  }
+
+  .LogoLeague{
+    height:125px;
+  }
