--- a/src/app/players-component/players-component.html
+++ b/src/app/players-component/players-component.html
@@ -1,5 +1,5 @@
 <div class="container mt-5">
-    <h2 class="text-center mb-4">Player List</h2>
+    <h2 class="text-center mb-4">Lista de jugadores</h2>
     <table class="table table-striped table-bordered w-75 mx-auto text-center">
     <thead class="table-dark">
       <tr>
@@ -24,4 +24,3 @@
   
   <app-detail-component [player]="selectedPlayer"/>
 </div>
-  
