--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -40,18 +40,17 @@ nav ul {
 nav ul li a {
     display: inline-block;
     color: white;
-    text-decoration: none;
     font-weight: bold;
     font-size: 18px;
-    transition: transform 0.3s ease, color 0.3s ease, text-shadow 0.3s ease;
+    transition: color 0.3s ease, text-shadow 0.3s ease;
 }
 
-nav ul li a:hover {
-     color: #ffd700;
-     text-decoration: underline;
-     text-shadow: 0 0 1px #ffd700, 0 0 6px #ffd700;
-     transform: scale(1.3) translateY(-2px);
-}
+  nav ul li a:hover {
+    color: #ffd700;
+    text-decoration: none;
+    text-shadow: 0 0 1px #ffd700, 0 0 6px #ffd700;
+    transform: scale(1.3) translateY(-2px);
+  }
 
 
 
