--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -37,13 +37,15 @@ nav ul {
   z-index: 0;
 }
 
-nav ul li a {
+  nav ul li a {
     display: inline-block;
     color: white;
+    -webkit-text-decoration: inherit;
+    text-decoration: inherit;
     font-weight: bold;
     font-size: 18px;
-    transition: color 0.3s ease, text-shadow 0.3s ease;
-}
+    transition: transform 0.5s, color 0.3s ease, text-shadow 0.3s ease;
+  }
 
   nav ul li a:hover {
     color: #ffd700;
@@ -51,8 +53,6 @@ nav ul li a {
     text-shadow: 0 0 1px #ffd700, 0 0 6px #ffd700;
     transform: scale(1.3) translateY(-2px);
   }
-
-
 
 
 .header-logo {
@@ -68,8 +68,11 @@ nav ul li a {
 }
 
 .teamLogo {
-  height: 85px;
+  height: 125px;
   z-index: 2;
+  text-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
+  filter: drop-shadow(0 0 6px rgba(0, 0, 0, 0.6));
+
 }
 
 .teamLogoLeague {
