--- a/src/app/players-component/players-component.html
+++ b/src/app/players-component/players-component.html
@@ -1,22 +1,21 @@
 <div class="container mt-5">
+<!--El buscador (pipe)-->
+<div class="container title align-items-center"></div>
+   <div class="container d-flex justify-content-end align-items-center mb-3">
+      <input type="text" placeholder="Buscar jugador..."[(ngModel)]="searchText" style="margin-bottom: 10px; padding: 5px; width: 200px;"/>
+      <select [(ngModel)]="filterBy" style="margin-left: 10px; padding: 5px;">
+        <option value="nombre">Nombre</option>
+        <option value="posicion">Posición</option>
+        <option value="edad">Edad</option>
+     </select>
+
+    </div>
+<!--El titulo de la página-->
   <h2 class="text-center mb-4">Lista de jugadores</h2>
 
-  <!-- Filtros -->
-  <input
-    type="text"
-    placeholder="Buscar jugador..."
-    [(ngModel)]="searchText"
-    style="margin-bottom: 10px; padding: 5px; width: 200px;"
-  />
-
-  <select [(ngModel)]="filterBy" style="margin-left: 10px; padding: 5px;">
-    <option value="nombre">Nombre</option>
-    <option value="posicion">Posición</option>
-    <option value="edad">Edad</option>
-  </select>
-
-  <!-- Tabla filtrada -->
-  <table class="table table-striped table-bordered w-75 mx-auto text-center mt-3">
+  
+  <app-detail-component [player]="selectedPlayer"/>
+  <table class="table table-striped table-bordered w-75 mx-auto text-center mt-4">
     <thead class="table-dark">
       <tr>
         <th>Nombre</th>
@@ -24,17 +23,10 @@
       </tr>
     </thead>
     <tbody>
-      <tr 
-        *ngFor="let player of teams | playerFilter:searchText:filterBy" 
-        (click)="selectedPlayer = player"
-        style="cursor: pointer;"
-      >
+      <tr *ngFor="let player of teams | playerFilter:searchText:filterBy" (click)="selectedPlayer = player" style="cursor: pointer;" >
         <td>{{ player.name }}</td>
         <td>{{ player.lastName }}</td>
       </tr>
     </tbody>
   </table>
-
-  <!-- Detalle del jugador seleccionado -->
-  <app-detail-component [player]="selectedPlayer"></app-detail-component>
 </div>
