--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -13,53 +13,54 @@
       }
 
     </div>
-    
-    <div>
-    <ul>
-      <li><a routerLink="/home">INICIO</a></li>
-      <li><a routerLink="/players">JUGADORES</a></li>
 
-    </ul>
+    <div>
+      <ul>
+        <li><a routerLink="/home">INICIO</a></li>
+        <li><a routerLink="/players">JUGADORES</a></li>
+
+      </ul>
     </div>
 
     <div class="teamsLogos content-flex md-2 container-fluid">
 
-          <a routerLink="/home">
-            <img src="teamBadges/nbaHome.svg" alt="Logo" class="teamLogoLeague3 mt-3 "></a>
-            <img src="teamBadges/ATL.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/BKN.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/BOS.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/CHA.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <a routerLink="/players">
-              <img src="CHI.png" alt="Logo" class="teamLogoLeague3 mt-4">
-            </a>
-            <img src="teamBadges/CLE.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/DAL.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/DEN.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/DET.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/GSW.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/HOU.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/IND.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/LAC.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/LAL.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/MEM.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/MIA.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/MIL.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/MIN.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/NOP.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/NYK.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/OKC.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/ORL.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/PHU.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/PHX.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/POR.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/SAC.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/SAS.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/TOR.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/UTA.svg" alt="Logo" class="teamLogoLeague mt-4">
-            <img src="teamBadges/WAS.svg" alt="Logo" class="teamLogoLeague mt-4">
-            
-      </div>
+      <a routerLink="/home">
+        <img src="teamBadges/nbaHome.svg" alt="Logo" class="teamLogoLeague3 mt-3 ">
+      </a>
+      <img src="teamBadges/ATL.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/BKN.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/BOS.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/CHA.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <a routerLink="/players">
+        <img src="CHI.png" alt="Logo" class="teamLogoLeague3 mt-4">
+      </a>
+      <img src="teamBadges/CLE.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/DAL.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/DEN.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/DET.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/GSW.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/HOU.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/IND.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/LAC.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/LAL.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/MEM.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/MIA.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/MIL.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/MIN.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/NOP.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/NYK.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/OKC.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/ORL.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/PHU.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/PHX.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/POR.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/SAC.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/SAS.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/TOR.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/UTA.svg" alt="Logo" class="teamLogoLeague mt-4">
+      <img src="teamBadges/WAS.svg" alt="Logo" class="teamLogoLeague mt-4">
+
+    </div>
 
 
   </nav>
