Cambios en el buscador, arreglando altura y titulos

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -9,7 +9,7 @@
       </div>
 
       }@else {
-      <h1 class="teamName">N B A </h1>
+      <h1 class="teamName"> Inicio</h1>
       }
 
     </div>
