--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,5 +1,5 @@
 <div class="container py-4">
-  <h1 class="title text-center">Home works</h1>
+  <h1 class="title text-center"></h1>
 
   <div *ngIf="matches.length === 0" class="alert alert-info text-center">
     No hay partidos (datos de ejemplo cargados). Usa los botones para crear o simular.
