--- a/src/app/players-component/players-component.html
+++ b/src/app/players-component/players-component.html
@@ -3,7 +3,7 @@
 <div class="container title align-items-center"></div>
    <div class="container d-flex justify-content-end align-items-center mb-3">
       <input type="text" placeholder="Buscar jugador..."[(ngModel)]="searchText" style="margin-bottom: 10px; padding: 5px; width: 200px;"/>
-      <select [(ngModel)]="filterBy" style="margin-left: 10px; padding: 5px;">
+      <select [(ngModel)]="filterBy" style="margin-left: 10px; padding: 6px; margin-top: -10px">
         <option value="nombre">Nombre</option>
         <option value="posicion">Posición</option>
         <option value="edad">Edad</option>
