pequeñas modificaciones: formulario CreatePlayer, Nueva ruta para crear jugadores,  arreglado filter-pipe al modificar players a player.model,al entrar a la ruta de crear jugadores el título cambia a Crear Jugador

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -7,8 +7,9 @@
         <img src="CHI.png" alt="Logo" class="teamLogo">
         <h1 class="teamName mb-0">{{ Player.teams.toUpperCase() }}</h1>
       </div>
-
-      }@else {
+     }@else if (currentRoute=='/create-player') {
+      <h1 class="teamName"> Crear Jugador</h1>
+     }@else {
       <h1 class="teamName"> Inicio</h1>
       }
 
