--- a/src/app/form-player/form-player.html
+++ b/src/app/form-player/form-player.html
@@ -1,54 +1,65 @@
-<form (submit)="createPlayer(); $event.preventDefault()">
-    
-     <!-- Tabla -->
-    <table class="table table-striped table-bordered w-50 mx-auto text-center mt-5">
-      <thead class="table-dark">
-        <tr>
-           <th>Número</th>
-           <th><input type="number"[(ngModel)]="newPlayer.alias" name='alias' placeholder=10 required></th>
-        </tr>
-        <tr>
-           <th>Nombre</th>
-           <th><input [(ngModel)]="newPlayer.name" name='name' placeholder="Nombre" required></th>
-        </tr>
-        <tr>
-           <th>Apellido</th>
-           <th><input [(ngModel)]="newPlayer.lastName" name='lastName' placeholder="Apellido" required></th>
-        </tr>
-        <tr>
-           <th>Posición</th>
-           <th><input [(ngModel)]="newPlayer.position" name='position' placeholder="Posición" required></th>
-        </tr>
-        <tr>
-           <th>Edad</th>
-           <th><input type="number" [(ngModel)]="newPlayer.age" name='age' placeholder=18 required></th>
-        </tr>
-        <tr>
-           <th>Altura</th>
-           <th><input [(ngModel)]="newPlayer.height" name='height' placeholder="Altura" required></th>
-        </tr>
-        <tr>
-           <th>Peso</th>
-           <th><input [(ngModel)]="newPlayer.weight" name='weight' placeholder="Peso" required></th>
-        </tr>
-        <tr>
-           <th>Equipo</th>
-           <th><input [(ngModel)]="newPlayer.teams" name='teams' placeholder="Chicago Bulls" required></th>
-           @if(newPlayer.teams=='Chicago Bulls'){
-            <input [(ngModel)]="newPlayer.initials" name='initials' value="CHI" hidden>
-           }
-        </tr>
-        <tr>
-            <th>Foto Jugador</th>
-            <th>
-                <input type="file" (change)="uploadFile($event)" required>
-            </th>
-        </tr>
-       </thead>
+<form (ngSubmit)="isEditMode ? updatePlayer() : createPlayer()"> <!--Si esta en modo edicion actualiza el jugador, si no lo crea-->
+  <table class="table table-striped table-bordered w-50 mx-auto text-center mt-5">
+    <thead class="table-dark">
+      <tr>
+        <th>Número</th>
+        <th>
+          <input type="number" [(ngModel)]="newPlayer.alias" name="alias" placeholder="10" required>
+        </th>
+      </tr>
+      <tr>
+        <th>Nombre</th>
+        <th>
+          <input [(ngModel)]="newPlayer.name" name="name" placeholder="Nombre" required>
+        </th>
+      </tr>
+      <tr>
+        <th>Apellido</th>
+        <th>
+          <input [(ngModel)]="newPlayer.lastName" name="lastName" placeholder="Apellido" required>
+        </th>
+      </tr>
+      <tr>
+        <th>Posición</th>
+        <th>
+          <input [(ngModel)]="newPlayer.position" name="position" placeholder="Posición" required>
+        </th>
+      </tr>
+      <tr>
+        <th>Edad</th>
+        <th>
+          <input type="number" [(ngModel)]="newPlayer.age" name="age" placeholder="18" required>
+        </th>
+      </tr>
+      <tr>
+        <th>Altura</th>
+        <th>
+          <input [(ngModel)]="newPlayer.height" name="height" placeholder="Altura" required>
+        </th>
+      </tr>
+      <tr>
+        <th>Peso</th>
+        <th>
+          <input [(ngModel)]="newPlayer.weight" name="weight" placeholder="Peso" required>
+        </th>
+      </tr>
+      <tr>
+        <th>Equipo</th>
+        <th>
+          <input [(ngModel)]="newPlayer.teams" name="teams" placeholder="Chicago Bulls" required>
+        </th>
+      </tr>
+      <tr>
+        <th>Foto Jugador</th>
+        <th>
+          <input type="file" (change)="uploadFile($event)" required>
+        </th>
+      </tr>
+    </thead>
   </table>
-
-  <!-- Botón centrado -->
+<!--Si esta en modo edicion actualiza el jugador, si no lo crea-->
   <div class="w-50 mx-auto text-center mt-3">
-    <button class="btn btn-primary w-100" type="submit" id="btnCreate">Crear Jugador</button>
+    <button class="btn btn-danger w-100" type="submit"id='btnCreate'> {{ isEditMode ? 'Actualizar Jugador' : 'Crear Jugador' }}</button> 
+    
   </div>
 </form>
