Añadido en el header Editar Jugador

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -9,8 +9,12 @@
       </div>
      }@else if (currentRoute=='/create-player') {
       <h1 class="teamName"> Crear Jugador</h1>
-     }@else {
+
+     }@else if (currentRoute=='/home') {
       <h1 class="teamName"> Inicio</h1>
+      
+     }@else {
+      <h1 class="teamName"> Editar Jugador</h1>
       }
 
     </div>
